2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/menu.php: Added users massive operation to the
	left menu into the massive ops category

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_agents.php: Fixed agent icon
	missed in the massive operations merged from my own fix in 
	the agent edition of july 19th

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/planned_downtime.php: Fixed a empty group array
	bug

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* DEBIAN/control
	install.php
	pandora_console.spec: Added zlib dependence to console installer,
	deb package and spec pacage. Added too missed curl dependence to
	spec package

2011-07-20  Dario Rodriguez <dario.rodriguez@artica.es>
	
	* godmode/setup/links.php: Changing error msg to notice msg.

2011-07-20  Dario Rodriguez <dario.rodriguez@artica.es>
	
	* godmode/setup/links.php: Fixed a wrong code to work with an empty array.

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* include/styles/dialog.css: Fixed wrong path in the
	warning dialog header style 3371399

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Fixed enterprise_not_hook constant
	fail and log notice. Now the home page bar graphs are showed
	without data. Bug: 3371403

2011-07-20 Miguel de Dios  <miguel.dedios@artica.es>

	*images/minimenu_open_arrow.png, images/minimenu_close_arrow.png: added
	images for to use in networmap enterprise.

2011-07-20  Vanessa Gil  <vanessa.gil@artica.es>

	* pandora_console_install.php: Changed Pandora home directory.

2011-07-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_manager.php: Fixed agent icons
	in agent editor advanced options

2011-07-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/admin_access_logs.php: Deleted old include 
	of graph engine

2011-07-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php